--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preload" as="style" href="css/style.css">
+    <link rel="icon" href="http://marina12.ru/theEnd/dist1/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="http://marina12.ru/theEnd/dist1/favicon.png" type="image/x-icon">
     <script src="https://api-maps.yandex.ru/2.1/?apikey=d1b7ccac-b176-4adb-bd55-6c0cfc8d08a9&lang=ru_RU">
     </script>
 </head>
@@ -27,7 +29,7 @@
                     <a href="#contacts" class="nav__item">Контакты</a>
                 </nav>
                 <div class="contacts menu__contacts">
-                    <a href="tel:+79997683299" class="phone contacts__phone">+7 (999) 768-32-99</a>
+                    <a href="tel:+79997683299" class="phone contacts__phone"> +7 (999) 768-32-99</a>
                     <button onclick="ym(92342863, 'reachGoal', 'button'); return true;" class="button contacts__button button--primary" data-toggle="modal">Заказать звонок</button>
                 </div>                
             </div>
@@ -92,8 +94,8 @@
                         <div class="swiper-wrapper swiper-no-swiping">
                             <!-- Slides -->
                             <div class="swiper-slide"><img class="swiper-lazy" src="img/slider/img-1.webp" alt=""></div>
-                            <div class="swiper-slide"><img class="swiper-lazy" data-src="img/slider/img-2.webp" alt=""></div>
-                            <div class="swiper-slide"><img class="swiper-lazy" data-src="img/slider/img-3.webp" alt=""></div>
+                            <div class="swiper-slide"><img class="swiper-lazy" src="#" data-src="img/slider/img-2.webp" alt=""></div>
+                            <div class="swiper-slide"><img class="swiper-lazy" src="#" data-src="img/slider/img-3.webp" alt=""></div>
                         </div>
                     </div>
                 </div>
@@ -419,11 +421,11 @@
                             <div class="swiper-wrapper swiper-no-swiping">
                                 <!-- Slides -->
                                 <div data-swiper-slide-index="0" class="swiper-slide"><img class="swiper-lazy" src="img/slider/img01.webp" alt="Турецкий ремонт"></div>
-                                <div data-swiper-slide-index="1" class="swiper-slide"><img class="swiper-lazy" data-src="img/slider/img02.webp" alt="Турецкий ремонт"></div>
-                                <div data-swiper-slide-index="2" class="swiper-slide"><img class="swiper-lazy" data-src="img/slider/img03.webp" alt="Турецкий ремонт"></div>
-                                <div data-swiper-slide-index="3" class="swiper-slide"><img class="swiper-lazy" data-src="img/slider/img04.webp" alt="Турецкий ремонт"></div>
-                                <div data-swiper-slide-index="4" class="swiper-slide"><img class="swiper-lazy" data-src="img/slider/img05.webp" alt="Турецкий ремонт"></div>
-                                <div data-swiper-slide-index="5" class="swiper-slide"><img class="swiper-lazy" data-src="img/slider/img06.webp" alt="Турецкий ремонт"></div>
+                                <div data-swiper-slide-index="1" class="swiper-slide"><img class="swiper-lazy" src="#" data-src="img/slider/img02.webp" alt="Турецкий ремонт"></div>
+                                <div data-swiper-slide-index="2" class="swiper-slide"><img class="swiper-lazy" src="#" data-src="img/slider/img03.webp" alt="Турецкий ремонт"></div>
+                                <div data-swiper-slide-index="3" class="swiper-slide"><img class="swiper-lazy" src="#" data-src="img/slider/img04.webp" alt="Турецкий ремонт"></div>
+                                <div data-swiper-slide-index="4" class="swiper-slide"><img class="swiper-lazy" src="#" data-src="img/slider/img05.webp" alt="Турецкий ремонт"></div>
+                                <div data-swiper-slide-index="5" class="swiper-slide"><img class="swiper-lazy" src="#" data-src="img/slider/img06.webp" alt="Турецкий ремонт"></div>
                             </div>
                         </div>
                     </div>
