--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preload" as="style" href="css/style.css">
-    <link rel="icon" href="http://marina12.ru/theEnd/dist1/favicon.png" type="image/x-icon">
-    <link rel="shortcut icon" href="http://marina12.ru/theEnd/dist1/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <script src="https://api-maps.yandex.ru/2.1/?apikey=d1b7ccac-b176-4adb-bd55-6c0cfc8d08a9&lang=ru_RU">
     </script>
 </head>
@@ -645,6 +644,15 @@
                 </div> 
             </div>            
         </div> 
+        <div class="footer__media">
+            <div class="container">
+                <p class="footer__media__text">Ростов на дону, Торговый центр Plaza Прямой телефон +7 (999) 768 32 99</p>
+                <div class="footer__media__icons">
+                    <img class="footer__media__icon" src="img/media/icon-1.svg" alt="message">
+                    <img src="img/media/icon-2.svg" alt="instagram">
+                </div>
+            </div>
+        </div>
     </footer>
 
     <div class="modal">
